wenns jetzt immer noch nicht geht ist schluss

--- a/src/components/temperature.html
+++ b/src/components/temperature.html
@@ -7,6 +7,6 @@
             <stop offset="100%" stop-color="rgba(70, 70, 255, 255"/>
         </linearGradient>
     </defs>
-    <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" url=url(#grad) />
+    <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" fill=url(#grad) />
     <text x="100" y="125" font-size="50px">X°C</text>
 </svg>
