added movable thermometer

--- a/src/components/temperature.html
+++ b/src/components/temperature.html
@@ -2,8 +2,8 @@
     <defs>
         <linearGradient id="grad" x1="0" x2="0" y1="0" y2="1"> 
             <stop offset="0%" stop-color="rgba(0, 0, 0, 0)" />
-            <stop offset="25%" stop-color="rgba(0, 0, 0, 0)" />
-            <stop offset="25%" stop-color="rgba(calc(2.55*75), 0, 0, 255)"/>
+            <stop offset="{percent}%" stop-color="rgba(0, 0, 0, 0)" />
+            <stop offset="{percent}%" stop-color="rgba(calc(2.55*{inv_percent}), 0, 0, 255)"/>
             <stop offset="100%" stop-color="rgba(70, 70, 255, 255"/>
         </linearGradient>
     </defs>
