make wind angle affected by increment button and fixed dispaly isues

--- a/src/components/wind_angle.html
+++ b/src/components/wind_angle.html
@@ -11,4 +11,7 @@
         transform-origin: 50% 50%;
         transform: rotate({deg}deg);
     }}
+    text {{
+        font-size: 40px;
+    }}
 </style>
