--- a/index.css
+++ b/index.css
@@ -4,6 +4,14 @@ body {
     overflow: hidden;
 }
 
+
+.bg-image {
+    filter: blur(8px);
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
 .button {
     font-size: 100%;
     padding: 5%;
