Revert "added a blur effect"
This reverts commit 2a108bcfa5b5d0eb83b8c1efaeeb4378c40ffd8e.

--- a/src/components/sources/wind_angle.html
+++ b/src/components/sources/wind_angle.html
@@ -4,7 +4,7 @@
     <text x="85" y="190">S</text>
     <text x="10" y="120">W</text>
     <text x="160" y="110"">O</text>
-    <path d="M 100 40 L 80 160 L 100 140 L 120 160 L 100 40 Z" stroke="black" stroke-width="5" fill="red"/>
+    <path class="needle" d="M 100 40 L 80 160 L 100 140 L 120 160 L 100 40 Z" stroke="black" stroke-width="5" fill="red"/>
 </svg>
 <style>
     .needle {{
