--- a/src/components/sources/rain.html
+++ b/src/components/sources/rain.html
@@ -9,5 +9,5 @@
    </defs>
     <path d="M 10 60 L 10 120 L 50 120 L 50 60 M 10 70 L 20 70 M 10 80 L 20 80 M 10 90 L 20 90 M 10 100 L 20 100 M 10 110 L 20 110" stroke="black" stroke-width=5 fill="url(#grad_water)"/>
     <text x=100 y=80 style="font-size: 50px;">{liter}</text>
-    <text x=95 y=120 style="font-size: 35px;">MM</text>
+    <text x=95 y=120 style="font-size: 35px;">Liter</text>
 </svg>
