--- a/src/components/sources/temperature_house.html
+++ b/src/components/sources/temperature_house.html
@@ -9,5 +9,5 @@
     </defs>
     <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" fill="url(#grad)"/>
     <path d="M 100 50 M 150 50 L 150 100 L 100 100 L 100 50 M 90 60 L 125 25 L 160 60 M 110 100 L 110 80 L 120 80 L 120 100 M 130 95 L 140 95 L 140 85 L 130 85 L 130 95 L 140 95 M 120 50 L 130 50 L 130 60 L 120 60 L 120 50 L 130 50" stroke="black" stroke-width="3" fill-opacity="0"/>
-    <text x="80" y="150" font-size="35px">{temperature}°</text>
+    <text x="80" y="150" font-size="35px">{temperature:.1}°</text>
 </svg>
