--- a/src/components/sources/rain.html
+++ b/src/components/sources/rain.html
@@ -10,5 +10,6 @@
     <path d="M 10 60 L 10 120 L 50 120 L 50 60 M 10 70 L 20 70 M 10 80 L 20 80 M 10 90 L 20 90 M 10 100 L 20 100 M 10 110 L 20 110" stroke="black" stroke-width=5 fill="url(#grad_water)"/>
     <text x=100 y=80 style="font-size: 35px;">{liter:.1}</text>
     <text x=95 y=120 style="font-size: 35px;">Liter</text>
+    <rect x="0" y="155" width="160" height="45" fill="{ph_color}" fill-opacity="{ph_opacity}" />
     <text x="0" y="190" style="font-size: 38px;">{ph}</text>
 </svg>
