Cleaned up a bunch of code

--- a/src/components/sources/rain.html
+++ b/src/components/sources/rain.html
@@ -11,5 +11,5 @@
     <text x=100 y=80 style="font-size: 35px;">{liter:.1}</text>
     <text x=95 y=120 style="font-size: 35px;">Liter</text>
     <rect x="0" y="155" width="160" height="45" fill="{ph_color}" fill-opacity="{ph_opacity}" />
-    <text x="0" y="190" style="font-size: 38px;">{ph}</text>
+    <text x="0" y="190" style="font-size: 38px;">{ph:.2} pH</text>
 </svg>
